--- a/src/html_partials/head.html
+++ b/src/html_partials/head.html
@@ -1,6 +1,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kiosk a1 tmobile</title>
+    <title>Kiosk a1 mobile</title>
     <link rel="stylesheet" href="css/main.min.css">
 </head>
