--- a/src/pin.html
+++ b/src/pin.html
@@ -46,7 +46,7 @@
                     </div>
                     <div class="row justify-content-center mx-0">
                         <div class="col-lg-5 col-md-8 col-12 text-center px-2">
-                            <a href="pin.html" class="btn btn-warning text-uppercase d-block mb-lg-5 mb-4">Weiter</a>
+                            <a href="#" class="btn btn-warning text-uppercase d-block mb-lg-5 mb-4">Weiter</a>
                             <a href="#" class="btn btn-link text-primary">Abbrechen</a>
                         </div>
                     </div>
