--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     </div>
                     <div class="row justify-content-center mx-0">
                         <div class="col-lg-5 col-md-8 col-12 text-center px-2">
-                            <a href="pin.html" class="btn btn-warning text-uppercase d-block mb-5">Weiter</a>
+                            <a href="#" class="btn btn-warning text-uppercase d-block mb-5">Weiter</a>
                         </div>
                     </div>
                     <div class="row justify-content-center mx-0">
